@@ -5,6 +5,9 @@ Changes for crash
 Unreleased
 ==========
 
+ - fix: avoid stripping arbitrative whitespaces from
+   commands passed via stdin
+
 2014/06/12 0.9.12
 =================
 
